# vfx-bidding-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: INSTALLATION_INSTRUCTIONS.md  MANUAL_TESTING_GUIDE.md  PROJECT_SUMMARY.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.png.base64
src-tauri/resources/python_sidecar/: MODEL_DOWNLOAD_TEST_REPORT.md  QUICK_START.md  README.md  SUMMARY.md  model_downloader.py
src-tauri/src/: lib.rs  main.rs  setup_wizard.rs
src-tauri/src/commands/: bid.rs  chat.rs  mod.rs  script.rs  settings.rs  setup.rs
src-tauri/src/sidecar/: mod.rs  process.rs  rpc.rs
src-tauri/src/state/: bid.rs  mod.rs  session.rs  sidecar.rs
src/components/Chat/: Chat.css  Chat.tsx  ChatWindow.tsx
src/components/Layout/: App.tsx  ModeSelector.tsx  ModeSelector.tsx.bak
src/components/LiveSync/: LiveSync.css  LiveSync.tsx  LiveSyncView.tsx
src/components/QuickGenerate/: QuickGenerate.css  QuickGenerate.tsx  QuickGenerateView.tsx
src/components/Settings/: Settings.tsx
src/components/Setup/: SetupWizard.tsx
src/hooks/: useBid.ts  useFileDrop.ts  useLlm.ts
src/services/: tauri.ts
src/stores/: bidStore.ts  chatStore.ts  settingsStore.ts
